make mainfunction
